# mfc-project-template

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
gui/: CMakeLists.txt  MfcApp.aps  MfcApp.cpp  MfcApp.h  MfcApp.rc  MfcAppDlg.cpp  MfcAppDlg.h  Resource.h  resource.h
gui/res/: MfcApp.rc2
